--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p></p>
 
     <script src="test.js" type="text/javascript"></script>
-    <script src="app.js" type="text/javascript"></script>
+    <script src="apps.js" type="text/javascript"></script>
   </body>
 
 </html>
